Final final commit for the day

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
-Поменять libft на рабочую libft
-Проверить все на утечки
-Доделать все остальное
+Доделать пайпы и билтины
+Доделать $?
+Довести до нормы
+Убрать все утечки, которых тут полно
+Добавить поддержку защищенных символов в eval
