--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 Доделать пайпы и билтины
-Доделать $?
 Довести до нормы
 Убрать все утечки, которых тут полно
-Добавить поддержку защищенных символов в eval
+проверить с помощью утилиты, похожей на cat, которая выводит номер процесса
