--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 Доделать пайпы и билтины
-Довести до нормы
+Довести до нормы(раскидать функции по файлам, уменьшить кол-во строк)
 Убрать все утечки, которых тут полно
 проверить с помощью утилиты, похожей на cat, которая выводит номер процесса
