undone norme and leaks

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-Доделать билтины
-Пофиксить баг при сеге с несколькими точками с запятой
 Довести до нормы(раскидать функции по файлам, уменьшить кол-во строк)
 Убрать все утечки, которых тут полно
+Исправить ошибку с неуловимую ошибку
