--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 Довести до нормы(раскидать функции по файлам, уменьшить кол-во строк)
 Убрать все утечки, которых тут полно
-Исправить ошибку с неуловимую ошибку
+Исправить ошибку с неуловимую ошибку (---сделано---)
